--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = tayseer
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.tayseer
+PRODUCT_BUNDLE_IDENTIFIER = com.athr.tayser
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2026 com.example. All rights reserved.
