--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   hive_flutter: ^1.1.0
   hive: ^2.2.3
   photo_manager: ^3.6.4
+  firebase_core: ^4.3.0
 
 dev_dependencies:
   flutter_test:
