--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,10 @@ dependencies:
   audioplayers: ^6.0.0
   cached_network_image: ^3.4.1
   camera: ^0.10.0
-  connectivity_plus: ^7.0.0
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   date_picker_timeline: ^1.2.6
   device_info_plus: ^12.3.0
-  device_preview: ^1.1.0
   dio: ^5.9.0
   emoji_picker_flutter: ^4.4.0
   equatable: ^2.0.5
@@ -33,7 +31,6 @@ dependencies:
   flutter_svg: ^2.2.2
   gap: ^3.0.1
   get_it: ^9.2.0
-  google_sign_in: ^7.2.0
   hexcolor: ^3.0.2
   image_picker: ^1.2.1
   lottie: ^3.3.1
@@ -44,15 +41,14 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
-  sign_in_with_apple: ^6.1.0
   story_view: ^0.16.6
   video_player: ^2.10.1
-  video_thumbnail: ^0.5.3
   visibility_detector: ^0.4.0+2
   socket_io_client: ^3.1.3
   hive_flutter: ^1.1.0
   hive: ^2.2.3
   photo_manager: ^3.6.4
+  flutter_launcher_icons: ^0.14.1
 
 dev_dependencies:
   flutter_test:
@@ -85,4 +81,5 @@ flutter:
 flutter_icons:
   android: true
   ios: true
+  remove_alpha_ios: true
   image_path: "assets/icons/app_logo_icon.png"
