--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   google_maps_flutter: ^2.14.0
   geolocator: ^14.0.2
   geocoding: ^4.0.0
+  flutter_launcher_icons: ^0.14.4
+  google_generative_ai: ^0.4.7
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
@@ -94,4 +97,5 @@ flutter:
 flutter_icons:
   android: true
   ios: true
+  
   image_path: "assets/icons/app_logo_icon.png"
