--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   hive: ^2.2.3
   photo_manager: ^3.6.4
   flutter_launcher_icons: ^0.14.1
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
