--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   geolocator: ^14.0.2
   geocoding: ^4.0.0
   uuid: ^4.5.1
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,7 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   build_runner: ^2.4.6
   hive_generator: ^2.0.1
+  freezed: ^2.5.2
 
 flutter:
   uses-material-design: true
