--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   hive_flutter: ^1.1.0
   hive: ^2.2.3
   photo_manager: ^3.6.4
-  fl_chart: ^1.1.1
+  fl_chart: ^1.1.0
   sqflite: ^2.4.1
   path: ^1.9.0
   firebase_core: ^4.3.0
@@ -75,6 +75,9 @@ dev_dependencies:
   build_runner: ^2.4.6
   hive_generator: ^2.0.1
   freezed: ^2.5.2
+
+dependency_overrides:
+  vector_math: ^2.2.0
 
 flutter:
   uses-material-design: true
