--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   google_sign_in: ^7.2.0
   sign_in_with_apple: ^6.1.0
   connectivity_plus: ^7.0.0
+  skeletonizer: ^2.1.2
 
 
 dev_dependencies:
