--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   sign_in_with_apple: ^6.1.0
   connectivity_plus: ^7.0.0
   skeletonizer: ^2.1.2
+  intl: ^0.20.2
 
 
 dev_dependencies:
