--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   debounce_throttle: ^2.0.0
   zego_uikit_signaling_plugin: ^2.8.20
   zego_uikit_prebuilt_call: ^4.22.2
+  firebase_auth: ^6.1.3
   
 
 dev_dependencies:
