--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   zego_uikit_signaling_plugin: ^2.8.20
   zego_uikit_prebuilt_call: ^4.22.2
   share_plus: ^12.0.1
+  file_picker: ^10.3.8
   
 
 dev_dependencies:
