--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,9 +52,7 @@ dependencies:
   fl_chart: ^1.1.0
   sqflite: ^2.4.1
   path: ^1.9.0
-  firebase_core: ^4.3.0
   flutter_local_notifications: ^19.5.0
-  firebase_messaging: ^16.1.0
   google_maps_flutter: ^2.14.0
   geolocator: ^14.0.2
   geocoding: ^4.0.0
@@ -63,7 +61,6 @@ dependencies:
   google_generative_ai: ^0.4.7
   carousel_slider: ^5.1.1
   freezed_annotation: ^2.4.4
-  google_sign_in: ^7.2.0
   sign_in_with_apple: ^6.1.0
   connectivity_plus: ^6.1.0
   skeletonizer: ^2.1.2
@@ -72,8 +69,13 @@ dependencies:
   debounce_throttle: ^2.0.0
   zego_uikit_signaling_plugin: ^2.8.20
   zego_uikit_prebuilt_call: ^4.22.2
-  firebase_auth: ^6.1.3
   
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
+  firebase_messaging: ^15.1.6
+  
+  # Google Sign In
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
